# AIJobApply

./: .env  .gitignore  AIJobApply_UML.puml  README.md  aijobapply_cache.json  get_jobs.py  main.py  notion_handler.py  old_requirements.txt  openai_handler.py  pyproject.toml  requirements.txt  test.ipynb  token.json  update_jobs.py
aijobapply/: aijobapply_gui.py  app.py  main.py
aijobapply/templates/: index.html
interface/: aijobapply_gui.py
legacy/: get_jobs.py  main.py  requirements.txt  setup.py
prompts/: find_email.txt  generate_custom_content.txt  generate_custom_contents.txt  generate_updated_job_description.txt
src/: __main__.py  email_handler.py  google_api_handler.py  google_drive_handler.py  google_sheets_handler.py  job_processor.py  linkedin_handler.py  llm_handler.py  load_jobs.py  main.py  notion_handler.py  openai_handler.py  utils.py
templates/: resume_template.docx
tests/: conftest.py  emails_test.py  test_email_handler.py  test_emails.py  test_job_processor.py  test_linkedin.py  test_linkedin_integration.py  test_linkedin_unit.py  test_notion_handler.py  test_openai.py  test_openai_handler.py
