[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AIJobApply"
version = "2.0.1"
description = "Package to apply for jobs automatically and send emails"
authors = [{name = "Sandeeppvn", email = "sandeeppvn@gmail.com"}]
readme = "README.md"
dependencies = [
    "ConfigParser==6.0.0",
    "openai==0.28.1",
    "PyPDF2==3.0.1",
    "pytest==7.4.3",
    "python-dotenv==1.0.0",
    "tqdm==4.65.0",
    "requests==2.28.2",
    "gspread==5.12.0",
    "pandas==2.1.2",
    "selenium==4.16.0",
    "python-docx==1.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
homepage =  "https://github.com/sandeeppvn/AIJobApply"

[project.scripts]
aijobapply = "src.main:aijobapply_cli"
