[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AIJobApply"
version = "3.0.3"
description = "Package to apply for jobs automatically and send emails"
authors = [{name = "Sandeeppvn", email = "sandeeppvn@gmail.com"}]
readme = "README.md"
dependencies = [
    "ConfigParser==6.0.0",
    "openai==1.6.1",
    "pytest==7.4.3",
    "python-dotenv==1.0.0",
    "tqdm==4.65.0",
    "requests==2.28.2",
    "gspread==5.12.0",
    "pandas==2.1.2",
    "selenium==4.16.0",
    "tk==0.1.0",
    "langchain==0.0352",
    "validate_email==1.3",
    "pydantic==2.5.3",
    "gptrim==0.1.6",
    "docxtpl==0.16.7",
    "python-docx==1.1.0",
    "google-api-python-client==2.111.0",
    "flask==3.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
homepage =  "https://github.com/sandeeppvn/AIJobApply"

[project.scripts]
aijobapply = "aijobapply.main:aijobapply_cli"

[project.entry-points.console_scripts]
aijobapply-cli = "aijobapply.main:aijobapply_cli"
